--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 <body>
     <h1><a href = "index.html">WEB</a></h1>
         <ol>
-            <li><a href = "1.html"> HTML</a><br></li>
+            <li><a href = "index.html"> HTML</a><br></li>
             <li><a href = "2.html">CSS</a><br></li>
             <li><a href = "3.html">JavaScript</a> <br></li>
     </ol>
